tests/type-error/TypeMismatch2.vix
test : Size
test x = x
